--- a/app/src/main/res/layout/activity_sign_in_delivery.xml
+++ b/app/src/main/res/layout/activity_sign_in_delivery.xml
@@ -17,7 +17,7 @@
         android:layout_centerInParent="true">
 
         <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/edt_phone"
+            android:id="@+id/edt_phone_d"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Phone Number"
@@ -25,7 +25,7 @@
             android:text="0988123344"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
-            android:textSize="25sp"
+            android:textSize="32sp"
             app:met_baseColor="@android:color/white"
             app:met_floatingLabel="highlight"
             app:met_primaryColor="@android:color/white"
@@ -66,14 +66,14 @@
 <!--            />-->
 
         <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/edt_password"
+            android:id="@+id/edt_password_d"
             android:hint="Password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="1234"
             android:textColorHint="@android:color/white"
             android:textColor="@android:color/white"
-            android:textSize="25sp"
+            android:textSize="32sp"
             android:inputType="textPassword"
             app:met_baseColor="@android:color/white"
             app:met_floatingLabel="highlight"
@@ -126,7 +126,7 @@
         >
 
         <Button
-            android:id="@+id/btn_sign_in"
+            android:id="@+id/btn_sign_in_d"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#CDDC39"
