--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -142,7 +142,7 @@
                         app:initialNumber="1"
                         app:textColor="@android:color/white"
                         app:textSize="8sp" />
-                    
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -182,6 +182,9 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+
+
                     <TextView
                         android:id="@+id/food_description"
                         android:layout_width="wrap_content"
@@ -217,6 +220,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/cooperhewitt_bold"
                         android:text="@string/size"
+                        android:textColor="#002b64 "
                         android:textSize="22sp" />
 
                     <RadioGroup
@@ -252,6 +256,7 @@
                         android:layout_width = "wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/cooperhewitt_bold"
+                        android:textColor="#002b64 "
                         android:text="@string/add_on"
                         android:textSize="22sp" />
 
@@ -262,7 +267,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="4dp"
                         android:layout_marginTop="0dp"
-                        android:tint="#002b64"
+                        android:tint="#c75c41"
                         app:srcCompat="@drawable/ic_add_box_black_24dp" />
 
                 </LinearLayout>
