--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -53,17 +53,17 @@
         app:useCompatPadding="true">
     </com.andremion.counterfab.CounterFab>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_rating"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_star_black_24dp"
-        app:backgroundTint="@android:color/white"
-        app:elevation="6dp"
-        app:layout_anchor="@id/app_bar_layout"
-        app:layout_anchorGravity="bottom|right|start"
-        app:pressedTranslationZ="12dp"
-        app:useCompatPadding="true"/>
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/btn_rating"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:srcCompat="@drawable/ic_star_black_24dp"-->
+<!--        app:backgroundTint="@android:color/white"-->
+<!--        app:elevation="6dp"-->
+<!--        app:layout_anchor="@id/app_bar_layout"-->
+<!--        app:layout_anchorGravity="bottom|right|start"-->
+<!--        app:pressedTranslationZ="12dp"-->
+<!--        app:useCompatPadding="true"/>-->
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
@@ -118,7 +118,7 @@
                             />
 
                         <TextView
-                            android:id="@+id/food_price_total"
+                            android:id="@+id/food_price_up"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="9"
@@ -130,18 +130,19 @@
 
                     </LinearLayout>
 
-                    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
-                        android:id="@+id/number_button"
-                        android:layout_width="100dp"
-                        android:layout_height="30dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="18dp"
-                        app:backGroundColor="#c75c41"
-                        app:finalNumber="20"
-                        app:initialNumber="1"
-                        app:textColor="@android:color/white"
-                        app:textSize="8sp" />
+                    <TextView
+                        android:id="@+id/food_description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/cooperhewitt_bold"
+                        android:lineSpacingMultiplier="1.5"
+                        android:padding="12dp"
+                        android:text="Description"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp" />
+
+
 
                 </LinearLayout>
 
@@ -154,9 +155,16 @@
                 android:layout_height="wrap_content">
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_weight="10">
 
                 <ImageView
                     android:layout_width="0dp"
@@ -175,30 +183,42 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
+                </LinearLayout>
+
+                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
+                    android:id="@+id/number_button"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="18dp"
+                    app:backGroundColor="#c75c41"
+                    app:finalNumber="20"
+                    app:initialNumber="1"
+                    app:textColor="@android:color/white"
+                    app:textSize="8sp" />
+
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/layout_price"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+<!--            <LinearLayout-->
+<!--                android:id="@+id/layout_price"-->
+<!--                android:orientation="vertical"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content">-->
 
+<!--                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton-->
+<!--                    android:id="@+id/number_button"-->
+<!--                    android:layout_width="100dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:layout_marginLeft="8dp"-->
+<!--                    android:layout_marginTop="8dp"-->
+<!--                    android:layout_marginBottom="18dp"-->
+<!--                    app:backGroundColor="#c75c41"-->
+<!--                    app:finalNumber="20"-->
+<!--                    app:initialNumber="1"-->
+<!--                    app:textColor="@android:color/white"-->
+<!--                    app:textSize="8sp" />    -->
 
-
-                    <TextView
-                        android:id="@+id/food_description"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:lineSpacingMultiplier="1.5"
-                        android:padding="12dp"
-                        android:text="Description"
-                        android:fontFamily="@font/cooperhewitt_bold"
-                        android:textSize="14sp"
-                        android:textColor="@android:color/black"
-                        />
-
-                </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
@@ -283,17 +303,17 @@
             </LinearLayout>
              </androidx.cardview.widget.CardView>
 
-            <android.widget.Button
-                android:id="@+id/btnShowComment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:text="Show Comments"
-                android:textColor="@android:color/white"
-                app:cornerRadius = "4dp"
-                />
+<!--            <android.widget.Button-->
+<!--                android:id="@+id/btnShowComment"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_margin="8dp"-->
+<!--                android:layout_marginLeft="8dp"-->
+<!--                android:layout_marginRight="8dp"-->
+<!--                android:text="Show Comments"-->
+<!--                android:textColor="@android:color/white"-->
+<!--                app:cornerRadius = "4dp"-->
+<!--                />-->
 
         </LinearLayout>
 
